--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "babel-plugin-macros": "^3.1.0",
+    "buffer": "^6.0.3",
     "form-data": "^4.0.0",
     "js-sha256": "^0.9.0",
     "moment": "^2.29.2",
